tests/tldk/error/error-tldk-test-error19.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1 EINPROGRESS (Operation now in progress)
0.100 > S 0:0(0) <...>
0.200 < S. 0:0(0) ack 1 win 5792 <mss 1460,sackOK,TS val 0 ecr 0,nop,wscale 7>
0.200 > . 1:1(0) ack 1 <nop,nop,TS val 0 ecr 0>